# p-is-np

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: subset-sum.ipynb
src/p_is_np/: __init__.py  main.tex
