[project]
name = "p-is-np"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Althaf Muhammad", email = "zoory9900@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "numpy>=2.3.5",
]

[project.scripts]
p-is-np = "p_is_np:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
